{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 300,
  "lineage": "136209ac-c52d-8c26-4a5d-f0cbcfcd6bdc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dummy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4a9b0b0197b758",
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:instance/i-0f8c4023b27e89f11",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8c4023b27e89f11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a010eee228ff3da4",
            "private_dns": "ip-10-0-4-6.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f643e380959dfbc6",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba415835ef1c2506",
            "tags": {
              "Casecode": "es20",
              "Company": "EliteSolutions LLC",
              "Department": "IT",
              "ManagedWith": "Terraform",
              "Name": "dummy-vm",
              "Owner": "EliteInfra",
              "Service": "Elite Technology Services"
            },
            "tags_all": {
              "Casecode": "es20",
              "Company": "EliteSolutions LLC",
              "Department": "IT",
              "ManagedWith": "Terraform",
              "Name": "dummy-vm",
              "Owner": "EliteInfra",
              "Service": "Elite Technology Services"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e9d0c9fb5573cce3"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.main-sg",
            "aws_subnet.main-private-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:internet-gateway/igw-0ca9eccc9b66530f0",
            "id": "igw-0ca9eccc9b66530f0",
            "owner_id": "901445516958",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:route-table/rtb-031955045894eef4d",
            "id": "rtb-031955045894eef4d",
            "owner_id": "901445516958",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca9eccc9b66530f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "tags_all": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016184bc9bcb587bf",
            "route_table_id": "rtb-031955045894eef4d",
            "subnet_id": "subnet-08c17a33d7de08b8e"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0411e1da7c9599066",
            "route_table_id": "rtb-031955045894eef4d",
            "subnet_id": "subnet-068d84b80d0610284"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03933d9e093080b2f",
            "route_table_id": "rtb-031955045894eef4d",
            "subnet_id": "subnet-0f66fda87dd8804da"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:security-group/sg-0e9d0c9fb5573cce3",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9d0c9fb5573cce3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.210/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.210/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Main-SG",
            "name_prefix": "",
            "owner_id": "901445516958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Casecode": "es20",
              "Company": "EliteSolutions LLC",
              "Department": "IT",
              "ManagedWith": "Terraform",
              "Name": "main-sg",
              "Owner": "EliteInfra",
              "Service": "Elite Technology Services"
            },
            "tags_all": {
              "Casecode": "es20",
              "Company": "EliteSolutions LLC",
              "Department": "IT",
              "ManagedWith": "Terraform",
              "Name": "main-sg",
              "Owner": "EliteInfra",
              "Service": "Elite Technology Services"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:subnet/subnet-0ba415835ef1c2506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ba415835ef1c2506",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901445516958",
            "tags": {
              "Name": "Main-private-1"
            },
            "tags_all": {
              "Name": "Main-private-1"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:subnet/subnet-02296752e0d619ed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02296752e0d619ed0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901445516958",
            "tags": {
              "Name": "Main-private-2"
            },
            "tags_all": {
              "Name": "Main-private-2"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:subnet/subnet-069078b1bafd26812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-069078b1bafd26812",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901445516958",
            "tags": {
              "Name": "Main-private-3"
            },
            "tags_all": {
              "Name": "Main-private-3"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:subnet/subnet-08c17a33d7de08b8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08c17a33d7de08b8e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901445516958",
            "tags": {
              "Name": "Main-public-1"
            },
            "tags_all": {
              "Name": "Main-public-1"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:subnet/subnet-068d84b80d0610284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-068d84b80d0610284",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901445516958",
            "tags": {
              "Name": "Main-public-2"
            },
            "tags_all": {
              "Name": "Main-public-2"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:subnet/subnet-0f66fda87dd8804da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f66fda87dd8804da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901445516958",
            "tags": {
              "Name": "Main-public-3"
            },
            "tags_all": {
              "Name": "Main-public-3"
            },
            "vpc_id": "vpc-0ad3c9d5d58f45c04"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:901445516958:vpc/vpc-0ad3c9d5d58f45c04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02135d32a363e2bbd",
            "default_route_table_id": "rtb-01dcc1044771e33c9",
            "default_security_group_id": "sg-09cae3520b361c7a4",
            "dhcp_options_id": "dopt-0dd3940ae41f21267",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad3c9d5d58f45c04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01dcc1044771e33c9",
            "owner_id": "901445516958",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}